<resources>
    <string name="app_name">maogai</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="date1">第一周</string>
    <string name="course1">毛泽东思想及其历史地位</string>
    <string name="time1">2课时</string>
    <string name="date2">第二周</string>
    <string name="course2">新民主主义革命理论</string>
    <string name="time2">2课时</string>
    <string name="date3">第三周</string>
    <string name="course3">社会主义改造理论</string>
    <string name="time3">2课时</string>
    <string name="date4">第四周</string>
    <string name="course4">社会主义建设道路初步探索的理论成果</string>
    <string name="time4">2课时</string>
    <string name="date5">第五周</string>
    <string name="course5">邓小平理论</string>
    <string name="time5">2课时</string>
    <string name="date6">第六周</string>
    <string name="course6">三个代表”重要思想</string>
    <string name="time6">2课时</string>
    <string name="date7">第七周</string>
    <string name="course7">科学发展观</string>
    <string name="time7">2课时</string>
    <string name="date8">第八周</string>
    <string name="course8">习近平新时代中国特色社会主义思想及其历史地位</string>
    <string name="time8">2课时</string>
    <string name="date9">第九周</string>
    <string name="course9">中国特色社会主义总任务</string>
    <string name="time9">2课时</string>
    <string name="date10">第十周</string>
    <string name="course10">全面深化改革</string>
    <string name="time10">2课时</string>
    <string name="date11">第十一周</string>
    <string name="course11">“五位一体”总体布局</string>
    <string name="time11">2课时</string>
    <string name="date12">第十二周</string>
    <string name="course12">全面推进军事现代化</string>
    <string name="time12">2课时</string>
    <string name="date13">第十三周</string>
    <string name="course13">“一国两制”与祖国统一</string>
    <string name="time13">2课时</string>
    <string name="date14">第十四周</string>
    <string name="course14">中国特色大国外交</string>
    <string name="time14">2课时</string>
    <string name="date15">第十五周</string>
    <string name="course15">全面从严治党</string>
    <string name="time15">2课时</string>
    <string name="plan">备注：计划16至17周进行期末复习与试题讲解，18周进行期末测试，19周开始进入寒假。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>